// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Meals /> should call handleAddMeal when addMeal is clicked 1`] = `
<div>
  <main
    className="bg-light main"
    style={
      Object {
        "minHeight": "calc(100vh - 151px)",
      }
    }
  >
    <Button
      className="btn btn-default"
      onClick={[Function]}
      style={
        Object {
          "margin": "1rem 1rem 1rem 0",
        }
      }
      value="Add meal"
    />
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      closeTimeoutMS={150}
      contentLabel="Meal"
      isOpen={true}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "bottom": "auto",
            "left": "50%",
            "marginRight": "-50%",
            "minWidth": "20rem",
            "right": "auto",
            "top": "50%",
            "transform": "translate(-50%, -50%)",
            "width": "60%",
          },
          "overlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.25)",
          },
        }
      }
    >
      <Button
        className="close"
        onClick={[Function]}
        value="×"
      />
      <Connect(Component)
        closeModal={[Function]}
      />
    </Modal>
    <ErrorWrapper
      error={null}
      handleMealUpdate={[Function]}
    />
    <Paginate
      nextUrl=""
      onPageChange={[Function]}
      previousUrl=""
      style={Object {}}
    />
  </main>
  <Footer />
</div>
`;

exports[`<Meals /> should match snapshot 1`] = `
<div>
  <main
    className="bg-light main"
    style={
      Object {
        "minHeight": "calc(100vh - 151px)",
      }
    }
  >
    <Button
      className="btn btn-default"
      onClick={[Function]}
      style={
        Object {
          "margin": "1rem 1rem 1rem 0",
        }
      }
      value="Add meal"
    />
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      closeTimeoutMS={150}
      contentLabel="Meal"
      isOpen={false}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "bottom": "auto",
            "left": "50%",
            "marginRight": "-50%",
            "minWidth": "20rem",
            "right": "auto",
            "top": "50%",
            "transform": "translate(-50%, -50%)",
            "width": "60%",
          },
          "overlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.25)",
          },
        }
      }
    >
      <Button
        className="close"
        onClick={[Function]}
        value="×"
      />
      <Connect(Component)
        closeModal={[Function]}
      />
    </Modal>
    <ErrorWrapper
      error={null}
      handleMealUpdate={[Function]}
    />
    <Paginate
      nextUrl=""
      onPageChange={[Function]}
      previousUrl=""
      style={Object {}}
    />
  </main>
  <Footer />
</div>
`;

exports[`<Meals /> should match snapshot 2`] = `
<div>
  <main
    className="bg-light main"
    style={
      Object {
        "minHeight": "calc(100vh - 151px)",
      }
    }
  >
    <Button
      className="btn btn-default"
      onClick={[Function]}
      style={
        Object {
          "margin": "1rem 1rem 1rem 0",
        }
      }
      value="Add meal"
    />
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      closeTimeoutMS={150}
      contentLabel="Meal"
      isOpen={false}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "bottom": "auto",
            "left": "50%",
            "marginRight": "-50%",
            "minWidth": "20rem",
            "right": "auto",
            "top": "50%",
            "transform": "translate(-50%, -50%)",
            "width": "60%",
          },
          "overlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.25)",
          },
        }
      }
    >
      <Button
        className="close"
        onClick={[Function]}
        value="×"
      />
      <Connect(Component)
        closeModal={[Function]}
      />
    </Modal>
    <ErrorWrapper
      error={null}
      handleMealUpdate={[Function]}
    />
    <Paginate
      nextUrl=""
      onPageChange={[Function]}
      previousUrl=""
      style={Object {}}
    />
  </main>
  <Footer />
</div>
`;

exports[`<Meals /> should match snapshot 3`] = `
<div>
  <main
    className="bg-light main"
    style={
      Object {
        "minHeight": "calc(100vh - 151px)",
      }
    }
  >
    <Button
      className="btn btn-default"
      onClick={[Function]}
      style={
        Object {
          "margin": "1rem 1rem 1rem 0",
        }
      }
      value="Add meal"
    />
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      closeTimeoutMS={150}
      contentLabel="Meal"
      isOpen={false}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "bottom": "auto",
            "left": "50%",
            "marginRight": "-50%",
            "minWidth": "20rem",
            "right": "auto",
            "top": "50%",
            "transform": "translate(-50%, -50%)",
            "width": "60%",
          },
          "overlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.25)",
          },
        }
      }
    >
      <Button
        className="close"
        onClick={[Function]}
        value="×"
      />
      <Connect(Component)
        closeModal={[Function]}
        meal={Object {}}
      />
    </Modal>
    <ErrorWrapper
      error={null}
      handleMealUpdate={[Function]}
    />
    <Paginate
      nextUrl=""
      onPageChange={[Function]}
      previousUrl=""
      style={Object {}}
    />
  </main>
  <Footer />
</div>
`;
